--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="cards">
       <a href="mapp.html" class="card">Interactive Campus Map</a>
       <div class="card classroom-trigger" style="cursor:pointer;">Locate Classrooms & Labs</div>
-      <a href="accessible.html" class="card">Accessible Routes</a>
+      <!-- <a href="accessible.html" class="card">Accessible Routes</a> -->
       <a href="api.html" class="card">360 Degree View</a>
     </div>
 
@@ -133,3 +133,4 @@
 
 </body>
 </html>
+
