--- a/log.html
+++ b/log.html
@@ -64,7 +64,7 @@ function login() {
 
   // Hardcoded login check
   if (phone === "5555555555" && password === "kasukabe") {
-    window.location.href = "index.html";   // OPEN HOME PAGE
+    window.location.href = "index1.html";   // OPEN HOME PAGE
   } else {
     document.getElementById('msg').innerText = "Wrong phone or password";
   }
@@ -73,3 +73,4 @@ function login() {
 
 </body>
 </html>
+
