Remove Login button from navigation
Commented out the Login button in the header.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </div>
     <div style="display:flex; gap:10px;">
 
-  <a href="home.html">
+  <!-- <a href="home.html">
     <button class="cta small-btn">Login</button>
-  </a>
+  </a> -->
 
   <a href="stu.html">
     <button class="cta small-btn">Be Helper</button>
@@ -133,4 +133,5 @@
 
 </body>
 </html>
+
 
